Se agrego un div y se centraron los textos

--- a/estilos.css
+++ b/estilos.css
@@ -19,6 +19,7 @@ body{
    color: blue;
    font-size: 45px;
    font-weight: bold;
+   text-align: center;
    padding: 3rem;
    background-color: rgb(24, 193, 193);
    margin: 10px;
